# Philipp_Tiso_Dissertation_Code_2019_2020

./: .gitignore  README.md
Computer_Vision/: ObjectProposer.py
Deployed_Scripts/: launch_sorting_gui.bashrc  sawyer_sorting.desktop
Full_Implementation/: PoseGrippMessage.msg  install_gazebo.txt  package.xml
GUI/: CMakeLists.txt  CustomContainerTab.py  CustomTab.py  SortableObject.msg  container_positions.xml  containers.xml  create_new_localised_object.py  customNotebook.py  custom_container_tab.py  custom_notebook.py  live_sorting_progress_view_class.py  main_gui.py  object_position_updating_service.py  object_positions.xml  position_publisher.py  sorting_object_class.py  tkInter_test.py  toggle_frame_class.py
ROS_Scripts/: CMakeLists.txt  SortableObjectMessage.msg  add_object_pose_node.py  create_new_localised_object.py  fetch_new_object_position_publisher.py  flex_ik_service_client.py  my_gripper.py  object_position_updating_service.py  package.xml  position_publisher.py  ros_xml_manipulation.py  sawyer_ik_solver.py  (+4 more)
tmp/: CMakeLists.txt  CustomContainerTab.py  SortableObjectMessage.msg  flex_ik_service_client.py  ik_service_client.py  kinect_test.py  launch_sim.txt  test.py  tkInter_test.py
tmp/scripts/: camera_publisher.py  customNotebook.py  custom_container_tab.py  custom_notebook.py  fetch_new_object_position_publisher.py  kinect_test.py  main_gui.py  object_positions.xml  position_publisher.py  sawyer_ik_solver.py  simple_camera_subscriber.py  sortable_object_batch_class.py  sortable_object_class.py  test_launch.launch  test_moveit.py  testxml.xml
(+32 files in other folders)
